crates/swc_ecma_parser/tests/test262-error-references/fail/414f485082a04cbe.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/414f485082a04cbe.js:1:5
  |
1 | var const
  |     ^^^^^

